Add images folder, finish lasagna recepis in lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,28 @@
 
     <body>
         <h1>Lasagna Recipes</h1>
+        <img src="./images/lasagna.jpeg" alt="Lasagna">
+        <p>Description: Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics</p>
+        <h3>Inredients</h3>
+        <ul>
+            <li>Meat</li>
+            <li>Onion</li>
+            <li>garlic</li>
+            <li>tomato products</li>
+            <li>sugar</li>
+            <li>spices and seasonings</li>
+            <li>lasagna noodles</li>
+            <li>cheese</li>
+            <li>egg</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>make the meat sauce</li>
+            <li>cook the noodles</li>
+            <li>make the ricotta mixture</li>
+            <li>layer the lasagna according to the recipe instructions</li>
+            <li>cover with foil and bake</li>
+            <li>let the lasagma rest before serving</li>
+        </ol>
     </body>
 </html>
