add pizza.html, add pizza link on index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Lasagna Recipes</a>
+        <br>
+        <a href="./recipes/pizza.html">Pizza Lasagna</a>
         
     </body>
 </html>
