add smokesalmonsushiroll.html, add smokesalmonsushiroll link to html, add sushi img

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Lasagna Recipes</a>
         <br>
-        <a href="./recipes/pizza.html">Pizza Lasagna</a>
-        
+        <a href="./recipes/pizza.html">Pizza Recipes</a>
+        <br>
+        <a href="./recipes/smokedsalmonsushiroll.html">Smoked Salmon Sushi Roll</a>
     </body>
 </html>
